--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string-array name="exploreItem">
+        <item>all</item>
         <item>hotel</item>
         <item>food</item>
         <item>transport</item>
