--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Xiamen Tourism App</string>
+    <string name="app_name">X-Travel</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string-array name="exploreItem">
